# CALM

./: .gitignore  README.MD  pyproject.toml  requirements.txt  sdm_benchmark_results.csv
backend/api/: main.py
backend/api/encode/: routes.py
backend/api/query/: routes.py
backend/api/store/: routes.py
backend/api/tests/: benchmark_results.py  sdm_benchmark_results 060825.csv
backend/api/tests/SDMPreMark/: sdm_reinforcement_analysis.csv
backend/api/tests/SDMPreMark/110825/: sdm_benchmark_extended_results.csv  sdm_critical_radius_mapping.csv  sdm_reinforcement_analysis.csv
backend/api/tests/SDMPreMark/comparison/: comparison_001_dense_vs_sparse_20250814_173925.csv
backend/api/tests/SDMPreMark/comprehensive/: comprehensive_001_full_sweep_20250814_174140.csv
backend/api/tests/SDMPreMark/critical/: critical_001_radius_mapping_20250814_174108.csv
backend/api/tests/SDMPreMark/focused/: focused_001_reinforcement_analysis_20250814_173958.csv
backend/api/tests/memory_test/: routes.py
backend/core/sdm/: memory.py
backend/core/sdm/hierarchy/: complexity_solver.py
backend/core/sdm/optimization/: radius_optimizer.py
backend/core/sdm/swarm/: swarm_agent.py
backend/utils/: SDMPreMark.py  benchmark_sdm.py
hardware/esp32-s3/sensor-node/: .gitignore  CMakeLists.txt  platformio.ini  sdkconfig
hardware/esp32-s3/sensor-node/include/: config.h  debug_utils.h
hardware/esp32-s3/sensor-node/main/: main.c
hardware/esp32-s3/sensor-node/src/: main.cpp
sdk/: README.md  cli.py  server.py
sdk/examples/: example_encode.py  example_query.py  example_store.py
(+18 files in other folders)
